# routine-calculator

./: .gitignore  LICENSE  README.md  cal_command.py  cmd.py  cmd_cal.py  cmd_delvar.py  cmd_eval.py  cmd_help.py  cmd_loadmap.py  cmd_plresult.py  cmd_pmap.py  cmd_pvar.py  cmd_savemap.py  cmd_set.py  command.py  date_and_time.py  delvar_command.py  global_resource.py  help_command.py  input.py  load.py  loadmap_command.py  main.py  module_locator.py  pmap_command.py  pvar_command.py  pyproject.toml  requirements.txt  save.py  savemap_command.py  set_command.py  store.py  timecal.py
routine_calculator/: cmd_cal.py  cmd_help.py  cmd_loadmap.py  cmd_plresult.py  cmd_pmap.py  cmd_pvar.py  cmd_savemap.py  command.py  global_resource.py  input.py  launch_web.py  load.py  main.py  store.py  web.py
tests/: test_command.py  test_global_resource.py
